metadata/objects/News_Announcements__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DisplayDate__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(LastModifiedDate)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;&quot;)+&quot; &quot;+TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;, &quot;+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used by the Data Packs tool to identify each record and update it with the corresponding entry in the Data Pack.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImageAttachmentId__c</fullName>
        <label>ImageAttachmentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(SUBSTITUTE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_260)), &quot;/sfsites/c&quot;, &quot;&quot;) &amp; &quot;servlet/servlet.FileDownload?file=&quot; &amp;  ImageAttachmentId__c , &quot;No Image&quot;,125,250)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For best results image size of 160 X 80 px is recommended.</inlineHelpText>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News_Channel__c</fullName>
        <label>News Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaser__c</fullName>
        <description>Enter first line of the content</description>
        <inlineHelpText>Copy the first line of the content</inlineHelpText>
        <label>Teaser</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Must have a fully qualified url starting with http:// or https://</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recent News</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>News_Channel__c</columns>
        <columns>Source__c</columns>
        <columns>External_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Article #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recent News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>